objects/SendGrid_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Login credentials for SendGrid email service.</description>
    <fields>
        <fullName>BCC_Email__c</fullName>
        <label>BCC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>TextArea</type>
    </fields>
    <label>SendGrid Credentials</label>
</CustomObject>